--- a/package.json
+++ b/package.json
@@ -1,31 +1,22 @@
 {
     "private": true,
+    "type": "module",
     "scripts": {
-        "dev": "mix",
-        "watch": "mix watch",
-        "watch-poll": "mix watch -- --watch-options-poll=1000",
-        "hot": "mix watch --hot",
-        "production": "mix --production"
+        "dev": "vite",
+        "build": "vite build"
     },
     "devDependencies": {
-        "@babel/preset-react": "^7.23.3",
         "@headlessui/react": "^1.4.2",
         "@inertiajs/react": "^1.0.14",
-        "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
         "@tailwindcss/forms": "^0.5.3",
         "@vitejs/plugin-react": "^4.2.0",
         "autoprefixer": "^10.4.12",
         "axios": "^1.6.1",
-        "laravel-mix": "^6.0.49",
         "laravel-vite-plugin": "^1.0.0",
         "postcss": "^8.4.31",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-refresh": "^0.14.0",
         "tailwindcss": "^3.2.1",
         "vite": "^5.0.0"
-    },
-    "dependencies": {
-        "@babel/preset-env": "^7.23.7"
     }
 }
